[gd_scene load_steps=10 format=3 uid="uid://ddsixicfunc4a"]

[ext_resource type="Script" path="res://Scenes/healing_tower.gd" id="1_6a01h"]
[ext_resource type="Texture2D" uid="uid://clxhn38rp14r3" path="res://Arts/Towers/healing_tower_sheet.png" id="4_lnp5t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ac3fh"]
size = Vector2(35.5, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_6w66q"]
radius = 96.0

[sub_resource type="AtlasTexture" id="AtlasTexture_n3bya"]
atlas = ExtResource("4_lnp5t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exbdl"]
atlas = ExtResource("4_lnp5t")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4jdm"]
atlas = ExtResource("4_lnp5t")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kcp6"]
atlas = ExtResource("4_lnp5t")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0mls6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3bya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exbdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4jdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kcp6")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Node2D" type="Node2D" groups=["Towers"]]
script = ExtResource("1_6a01h")

[node name="HealingTower" type="StaticBody2D" parent="." groups=["Towers"]]
collision_layer = 17
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealingTower"]
position = Vector2(2.25, 8)
shape = SubResource("RectangleShape2D_ac3fh")

[node name="Area2D" type="Area2D" parent="." groups=["Allies"]]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6w66q")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0mls6")
autoplay = "default"
frame_progress = 0.593857

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
